karnc/tests/fixtures/negative/141_adapter_missing_binding/src/tokens.karn
adapter tokens {
  capability Jwt {
    fn sign(secret: String) -> Effect[String]
  }

  provides Jwt = JoseJwt
}
